# manual_sunset_ml

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  Layer.cpp  Layer.h  MainWindow.cpp  MainWindow.h  Matrix.cpp  Matrix.h  NeuralNetwork.cpp  NeuralNetwork.h  Vector.cpp  Vector.h  main.cpp  ml_gui.ui  ms_math.h  utils.cpp  utils.h
